<resources>
    <string name="app_name">多开播放器</string>
    <string name="add_video">添加视频</string>
    <string name="close_all">关闭全部</string>
    <string name="volume">音量</string>
    <string name="brightness">亮度</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="loop">循环</string>
    <string name="fullscreen">全屏</string>
    <string name="close">关闭</string>
    <string name="mute">静音</string>
    <string name="unmute">取消静音</string>
    <string name="restore_brightness">恢复默认亮度</string>
    <string name="permission_required">需要权限</string>
    <string name="storage_permission_message">需要存储权限来访问本地视频文件</string>
    <string name="overlay_permission_message">需要悬浮窗权限来显示多开窗口</string>
    <string name="grant">授权</string>
    <string name="cancel">取消</string>
</resources>